Add installment to title page. Change images periodically.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <header id="header">
 	<div class="content">
 	  <div class="inner">
-	    <h1 id="logo">The Two Breweries Hill Race</h1>
+	    <h1 id="logo">The <span id="installment"></span> Two Breweries Hill Race</h1>
 	    <p>
 	      A race from Traquair House in Innerleithen to Broughton
 	      in the scenic Scottish Borders.<br/> Race category AL,
