--- a/live.html
+++ b/live.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="assets/css/live.css" rel="stylesheet" />
@@ -14,7 +18,7 @@
     <div class="form-group">
       <div class="btn-group">
 	<button type="button" class="btn btn-primary" id="update">Sync</button><br/>
-	<input type="text" class="form-control" id="name" placeholder="Enter your name" />
+	<input type="text" class="form-control" id="name" autofocus="true" placeholder="Enter your name" />
 	<select class="form-control" id="checkpoints">
 	  <option value="" selected="true" disabled="true">Select your checkpoint</option>
 	</select>
