--- a/tracking.html
+++ b/tracking.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="assets/css/live.css" rel="stylesheet" />
@@ -11,18 +15,19 @@
     <script type="text/javascript" src="assets/js/tracking.js"></script>
   </head>
   <body>
-    <h1>Two Breweries Hill Race Live Tracking</h1>
-    <table id="live" class="display" style="width: 100%">
-      <thead>
-        <tr>
-	  <th>Bib</th>
-	  <th>Name</th>
-	  <th>Category</th>
-	  <th>Club</th>
-	  <th>CP</th>
-	  <th>Time</th>
-        </tr>
-      </thead>
+    <h1>Two Breweries Hill Race</h1>
+    <div class="btn-group" role="group" aria-label="Category search" id="filter">
+      <button type="button" class="btn btn-primary">Open</button>
+      <button type="button" class="btn btn-primary">F</button>
+      <button type="button" class="btn btn-primary">M40+</button>
+      <button type="button" class="btn btn-primary">F40+</button>
+      <button type="button" class="btn btn-primary">M50+</button>
+      <button type="button" class="btn btn-primary">F50+</button>
+      <button type="button" class="btn btn-primary">M60+</button>
+      <button type="button" class="btn btn-primary">F60+</button>
+    </div>
+    <table class="display" style="width: 100%" id="tracking-table">
+      <thead><tr><th>Bib</th><th>Name</th><th>Category</th><th>Club</th><th>CP</th><th>Time</th></tr></thead>
     </table>
   </body>
 </html>
