--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Two Breweries Hill Race: Registration</title>
+    <title>TBHR: Registration</title>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -21,7 +21,7 @@
     <div class="form-group">
       <div class="btn-group">
 	<button type="button" class="btn btn-primary" id="update">Sync</button><br/>
-	<input type="text" class="form-control" id="who" autofocus="true" placeholder="Enter your name" />
+	<input type="text" class="form-control" id="who" autofocus="true" placeholder="Registration marshal name" />
       </div>
     <ul class="nav nav-tabs" id="registration-tab">
       <li class="nav-item">
