--- a/live.html
+++ b/live.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>TBHR: Live Updates</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="assets/css/live.css" rel="stylesheet" />
@@ -56,6 +57,10 @@
             <th>Bib</th>
             <th>Name</th>
             <th>Time</th>
+            <th>Pos</th>
+            <th>Cat</th>
+            <th>Club</th>
+            <th>Start</th>
             <th>Edit</th>
           </tr>
 	</thead>
